@@ -7,6 +7,7 @@ Version 5.3.3
 - Fixed some union initializer bugs
 - Handle mixed float/int in ?: by promoting one side as necessary
 - Support debug_baud macro to some degree
+- Set default baud rate for C and BASIC based on -D_BAUD=n macro
 
 Version 5.3.2
 - Accept ' as a digit separator as well as '_' (C++14 uses single quote)
